<resources>
    <string name="app_name">TYMI</string>
    <string name="banner_ad_id"></string>
    <string name="interstitial_ad_id"></string>
    <string name="rewarded_video_ad_id"></string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="select">Select</string>
    <string name="loading">Loading&#8230;</string>
    <string name="location">Location</string>
    <string name="no_data">No data available</string>
    <string name="no_internet">Please check Internet connection and Try again.</string>
    <string name="dollar">$</string>

    <!--Login-->
    <!--<string name=""></string>-->
    <string name="app_full_name">Track Your Medical Incidents</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="no_account">Don\'t have an account</string>
    <string name="register">Register</string>

    <!--Registration-->
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="role">Role</string>
    <string name="dob">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>

    <!--Forgot Password-->
    <string name="forgot_password_text">Please enter an Email to receive Instructions for resetting a Password</string>
    <string name="send">Send</string>

    <!--Home-->
    <string name="dashboard">DashBoard</string>
    <string name="add_profile">Add Profile</string>
    <string name="view_profiles">View Profiles</string>
    <string name="add_incident">Add Incident</string>
    <string name="view_incidents">View Incidents</string>
    <string name="logout">Logout</string>

    <!--Add Incident-->
    <string name="status">Status</string>
    <string name="select_profile">Select Profile</string>
    <string name="select_incident">Select Incident</string>
    <string name="cause">Cause</string>
    <string name="start_date">Start Date</string>
    <string name="medication">Medication</string>
    <string name="notes">Notes</string>
    <string name="end_date">End Date</string>
    <string name="expenses">Expenses ($)</string>
    <string name="hospital">Hospital</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--View Profiles-->
    <string name="my_profile">My Profile</string>
    <string name="child_profiles">Child Profiles</string>
    <string name="edit_profile">Edit Profile</string>

    <!--View Incidents-->
    <string name="open_incidents">Open Incidents</string>
    <string name="closed_incidents">Closed Incidents</string>
    <string name="profile">Profile</string>
    <string name="incident">Incident</string>
    <string name="view_incident">View Incident</string>
    <string name="edit_incident">Edit Incident</string>

    <!--Navigation Header-->
    <string name="welcome">Welcome!</string>

    <!--About us-->
    <string name="about_us">About Us</string>
    <string name="what_is_tymi">What is TYMI?</string>
    <string name="what_is_tymi_answer">TYMI, a Simple and Unique mobile application that helps you to
        record and monitor all your family Medical incidents.\n\n<b><i>TYMI - Track Your Medical Incidents</i></b></string>
    <string name="how_tymi_works">How TYMI works?</string>
    <string name="how_tymi_works_answer">Follow the simple application Instructions and Record all your Medical incidents
        and TYMI will keep them for you to assess later.</string>
    <string name="why_tymi">Why TYMI?</string>
    <string name="why_tymi_answer">TYMI is the perfect replacement for undependable paper records that hold bits and
        pieces of your Medical incidents. TYMI is the way to keep the information that is important to you in
        one single repository.</string>

    <!--Contact us-->
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_text">We welcome and encourage your input.\nPlease send comments and
        suggestions to us at <b></b>.\n\n\nThanks for using TYMI</string>

    <!--messages-->
    <string name="msg_registration">Congratulations, You have been registered successfully.
        \nPlease Login into the application.</string>
    <string name="msg_forgot_password">We have a sent mail with Instructions to reset your Password.</string>
    <string name="msg_logout">Are you sure want to Logout?</string>
    <string name="msg_session_expire">Session has been Expired, Please re-login into the application.</string>
    <string name="msg_location_settings">Please turn on Google Location Service in your device settings.</string>
    <string name="msg_location">Location is not found, please restart and Allow required permissions.</string>
    <string name="msg_device_id">Device unique is not found, please restart and Allow required permissions.</string>
</resources>
