<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@id/add_profile"
            android:icon="@drawable/ic_add_profile"
            android:title="@string/add_profile" />

        <item
            android:id="@id/view_profiles"
            android:icon="@drawable/ic_view_profiles"
            android:title="@string/view_profiles" />

        <item
            android:id="@id/add_incident"
            android:icon="@drawable/ic_add_incident"
            android:title="@string/add_incident" />

        <item
            android:id="@id/view_incidents"
            android:icon="@drawable/ic_view_incidents"
            android:title="@string/view_incidents" />

        <item
            android:id="@id/about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />

        <item
            android:id="@id/contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contact_us" />
    </group>

    <item
        android:id="@id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>