<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Match"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            style="@style/Match"
            android:divider="@drawable/divider_vertical"
            android:orientation="vertical"
            android:padding="@dimen/margin"
            android:showDividers="middle">

            <TextView
                style="@style/AboutUs.Title"
                android:text="@string/what_is_tymi" />

            <TextView
                style="@style/AboutUs.Text"
                android:text="@string/what_is_tymi_answer" />

            <TextView
                style="@style/AboutUs.Title"
                android:text="@string/how_tymi_works" />

            <TextView
                style="@style/AboutUs.Text"
                android:text="@string/how_tymi_works_answer" />

            <TextView
                style="@style/AboutUs.Title"
                android:text="@string/why_tymi" />

            <TextView
                style="@style/AboutUs.Text"
                android:text="@string/why_tymi_answer" />
        </LinearLayout>
    </ScrollView>

    <com.tymi.widget.BannerAdWidget style="@style/MatchWidth" />
</LinearLayout>
