<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchWidth"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:minHeight="@dimen/et_min_ht"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_profile"
        style="@style/IncidentItem"
        android:text="@string/profile"
        android:textColor="@color/textPrimary" />

    <TextView
        android:id="@+id/item_incident"
        style="@style/IncidentItem"
        android:text="@string/incident"
        android:textColor="@color/textPrimary" />

    <TextView
        android:id="@+id/item_start_date"
        style="@style/IncidentItem"
        android:text="@string/start_date"
        android:textColor="@color/textPrimary" />

    <TextView
        android:id="@+id/item_end_date"
        style="@style/IncidentItem"
        android:text="@string/end_date"
        android:textColor="@color/textPrimary" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/item_edit"
        style="@style/Wrap"
        android:layout_margin="@dimen/margin"
        android:foreground="?attr/selectableItemBackground"
        app:srcCompat="@drawable/ic_edit" />
</LinearLayout>