<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Match"
    android:divider="@drawable/divider_vertical"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    android:showDividers="middle">

    <TextView
        style="@style/MatchWidth"
        android:text="@string/forgot_password_text"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/dashboard_title" />

    <LinearLayout
        style="@style/MatchWidth"
        android:orientation="vertical">

        <TextView
            style="@style/Wrap"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_email"
            style="@style/MatchWidth"
            android:imeOptions="actionSend"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_layout"
        style="@style/MatchWidth"
        android:layout_marginTop="@dimen/margin"
        android:divider="@drawable/divider_horizontal"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/MatchWidth"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_send"
            style="@style/MatchWidth"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/send" />
    </LinearLayout>
</LinearLayout>