<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Match"
    android:fillViewport="true"
    android:overScrollMode="never">

    <LinearLayout
        style="@style/Match"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/app_full_name"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            style="@style/MatchWidth"
            android:layout_margin="@dimen/margin"
            android:background="@android:color/white"
            android:divider="@drawable/divider_vertical"
            android:orientation="vertical"
            android:padding="@dimen/margin"
            android:showDividers="middle">

            <LinearLayout
                style="@style/MatchWidth"
                android:orientation="vertical">

                <TextView
                    style="@style/Wrap"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/MatchWidth"
                    android:hint="@null"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                style="@style/MatchWidth"
                android:orientation="vertical">

                <TextView
                    style="@style/Wrap"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/MatchWidth"
                    android:hint="@null"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                style="@style/MatchWidth"
                android:divider="@drawable/divider_horizontal"
                android:orientation="horizontal"
                android:showDividers="middle">

                <Button
                    android:id="@+id/btn_login"
                    style="@style/MatchWidth"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/btn_forgot_password"
                    style="@style/MatchWidth"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/forgot_password" />
            </LinearLayout>

            <LinearLayout
                style="@style/MatchWidth"
                android:layout_marginTop="@dimen/margin"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/Wrap"
                    android:text="@string/no_account" />

                <Button
                    android:id="@+id/btn_register"
                    style="@style/MatchWidth"
                    android:text="@string/register" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3">

            <com.tymi.widget.BannerAdWidget
                style="@style/MatchWidth"
                android:layout_gravity="bottom" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>