<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Match"
    android:orientation="vertical">

    <ScrollView
        android:id="@id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            style="@style/Match"
            android:divider="@drawable/divider_vertical"
            android:orientation="vertical"
            android:padding="@dimen/margin"
            android:showDividers="middle">

            <LinearLayout
                style="@style/MatchWidth"
                android:orientation="vertical">

                <TextView
                    style="@style/Wrap"
                    android:text="@string/full_name" />

                <EditText
                    android:id="@+id/et_full_name"
                    style="@style/MatchWidth"
                    android:hint="@null"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                style="@style/MatchWidth"
                android:orientation="vertical">

                <TextView
                    style="@style/Wrap"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/MatchWidth"
                    android:hint="@null"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <com.tymi.widget.SpinnerWidget
                android:id="@+id/role"
                style="@style/MatchWidth"
                app:SpinnerWidget_key="@string/role" />

            <com.tymi.widget.DateViewWidget
                android:id="@+id/et_dob"
                style="@style/MatchWidth"
                app:DateViewWidget_key="@string/dob"
                app:DateViewWidget_max_today="true" />

            <!--<LinearLayout
                style="@style/MatchWidth"
                android:orientation="vertical">

                <TextView
                    style="@style/Wrap"
                    android:text="@string/mobile" />

                <EditText
                    android:id="@+id/et_mobile"
                    style="@style/MatchWidth"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                style="@style/MatchWidth"
                android:orientation="vertical">

                <TextView
                    style="@style/Wrap"
                    android:text="@string/city" />

                <EditText
                    android:id="@+id/et_city"
                    style="@style/MatchWidth"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                style="@style/MatchWidth"
                android:orientation="vertical">

                <TextView
                    style="@style/Wrap"
                    android:text="@string/country" />

                <EditText
                    android:id="@+id/et_country"
                    style="@style/MatchWidth"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />
            </LinearLayout>-->

            <LinearLayout
                style="@style/MatchWidth"
                android:orientation="vertical">

                <TextView
                    style="@style/Wrap"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/MatchWidth"
                    android:hint="@null"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                style="@style/MatchWidth"
                android:orientation="vertical">

                <TextView
                    style="@style/Wrap"
                    android:text="@string/confirm_password" />

                <EditText
                    android:id="@+id/et_confirm_password"
                    style="@style/MatchWidth"
                    android:hint="@null"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/btn_layout"
        style="@style/MatchWidth"
        android:divider="@drawable/divider_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/margin"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/MatchWidth"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/MatchWidth"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/submit" />
    </LinearLayout>

    <com.tymi.widget.BannerAdWidget style="@style/MatchWidth" />
</LinearLayout>